--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,55 +2,12 @@
 <!--NavBar.-->
 <app-navbar></app-navbar>
 
-<h2><router-outlet></router-outlet> </h2>
+
+<router-outlet></router-outlet>
 
 
 <!--CODE-->
-<app-teste></app-teste>
-
-<div style="text-align:center">
-
-<button [ngClass]="{'class-css':nome}" (click)="show()">Mostrar Componente</button>
-<app-trein *ngIf="mostrar" ></app-trein>
-<ul>
-  <div *ngFor="let item of lista3" >
-      {{item}}
-
-      <app-trein></app-trein> <!-- Chama o componente x vezes do array--->
-
-</div>
-</ul>
-
-
-<div>
-  <form (ngSubmit)="onSubmit()">
-  <input class="form-control" type="text" name="icep" placeholder="CEP" [(ngModel)]="icep"/>
-  {{icep}}
-  <button type=submit>Procurar</button>
-  </form>
-</div>
-
-
-
-<div>
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col">CEP</th>
-      <th scope="col">BAIRRO</th>
-      <th scope="col">UF</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>{{cep}}</td>
-      <td>{{bairro}}</td>
-      <td>{{uf}}</td>
-    </tr>
-
-  </tbody>
-</table>
-</div>
+<app-filho (Output)="testOutput($event)"></app-filho>
 
 
 
